Tried to fix the collapse menu but i dont think its enough

--- a/css/style.css
+++ b/css/style.css
@@ -276,6 +276,10 @@ html,body .wrapper .container-fluid {
     transform: rotate(90deg);
   }
 
+  .collapse.in {        
+    display: block;       
+  }
+
   [v-cloak] {
     display: none;
   }
